Fix index page rendering errors on mobile devices.

--- a/assets/candlepin-custom.less
+++ b/assets/candlepin-custom.less
@@ -35,20 +35,23 @@ div#front-page-blurb {
 div#front-page-lower {
   #gradient.vertical(@start-color: #bbb; @end-color: white);
 
-  .what-is,
-  .features,
-  .news {
-    .make-md-column(4);
+  .front-column {
     font-family: "Overpass", @font-family-base;
   }
 
-  .news a {
+  ul {
+    padding-left: 15px;
+  }
+
+  a {
     text-decoration: none;
   }
 
-  h3 {
-    color: @rh-dark-red;
-    font-size: 20px;
+  a.more-link {
+    .pull-right;
+    font-size: 16px;
+    margin-bottom: 10px;
+    margin-top: -5px;
   }
 
   a[role=button] {
@@ -56,14 +59,10 @@ div#front-page-lower {
     .active;
     .button-variant(white; @rh-red; darken(@rh-red, 10%));
     .btn-styles(@rh-red);
+    .btn-block;
     font-weight: bold;
-    font-size: 12px;
-    text-transform: uppercase;
+    font-size: 17px;
   }
-
-   div#button-row.row {
-     padding-bottom: 20px;
-   }
 }
 
 // NAVBAR
